# artika

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  docker-compose.yml  setup-new-device.sh  status.py  sync-memory.sh
agents/: AGENTS.md  morning-briefing.sh  (+4 more)
backend/: alembic.ini  assign_log.txt  campaigns_dump.txt  debug_assign.txt  pyproject.toml  requirements.txt  seed_tasks.py  status_dump.json  tasks_final.txt  tasks_review.txt  vk_campaign_assignments.json  vk_campaigns_cache.json
backend/alembic/versions/: 5b2edab7249d_schema_with_vk_ads_support.py  a1b2c3d4e5f6_project_yandex_token_ref.py
backend/app/: config.py  main.py
backend/app/api/: ai_insights.py  analytics.py  auth.py  calltouch.py  campaigns.py  metrika.py  project_tasks.py  projects.py  router.py  settings.py  sync.py  vk_ads_api.py  vk_oauth.py  webmaster.py
backend/app/auth/: jwt_handler.py  middleware.py
backend/app/clients/: base_client.py  calltouch.py  claude_client.py  vk_ads.py  yandex_direct.py  yandex_metrika.py  yandex_webmaster.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ab_test.py  ad.py  ad_group.py  ai_insight.py  api_credential.py  campaign.py  conversion.py  daily_stats.py  goal.py  keyword.py  project.py  project_task.py  search_query.py  webmaster_query.py
backend/app/scheduler/: scheduler.py
backend/app/schemas/: analytics.py  auth.py  campaign.py
backend/app/security/: encryption.py
backend/app/services/: sync_service.py
backend/app/services/prompts/: ad_variant_suggestions.py  keyword_analysis.py  performance_analysis.py
(+191 files in other folders)
